# go-for-react-native

./: README.md
go/: Makefile  Readme.md  go.mod
go/cmd/libfoo/: jx.c  jx.h  main.go
go/foo/: foo.go
reactApp/: App.js  ReadMe.md  Readme.md
reactApp/android/: local.properties
reactApp/android/app/: build.gradle
reactApp/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
reactApp/android/app/src/main/java/com/reactapp/: GoModule.java  GoPackage.java  MainApplication.java
reactApp/android/app/src/main/jniLibs/: Readme.md
